# Turbojet-Digital-Twin

./: .coveragerc  README.md  bench_run.py  config.yaml  pipeline.py  pipeline.py.bak  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: stacking.yaml
docs/: ARCHITECTURE.md  DATA.md  Equations.md  Theory.md
models/: best_model.metrics.json  grouped_model.metrics.json  test_model.config.json  test_model.metrics.json
research/: index.md  paper.md  poster.md  references.bib
scripts/: convert_engine_cad.py
src/api/: server.py  server.py.bak
src/dataset/: features.py  features.py.bak  loader.py  split.py.bak
src/digital_twin/: engine.py
src/estimation/: state_estimator.py  ukf.py
src/explainability/: root_cause.py  shap_explainer.py
src/faults/: injection.py
src/maintenance/: decision_engine.py
src/metrics/: regression.py
src/performance/: benchmark.py
src/physics/: component_maps.py  constants.py  cycle_model.py  thermodynamics.py
src/prediction/: failure_probability.py  rul.py
src/report/: research.py
src/research/: experiment.py
src/simulation/: what_if.py
src/surrogate/: benchmark.py  hybrid.py  model.py  model.py.bak  train.py  train.py.bak
src/training/: evaluate.py  hyperparameter_search.py  trainer.py  trainer.py.bak
src/uncertainty/: adaptive_conformal.py  quantile.py
src/validation/: benchmark.py
src/viz/: dashboard.py  dashboard.py.bak  engine_3d.py  plots.py
tests/: test_estimation.py  test_integration.py  test_physics.py  test_scenario_simulator.py  test_training.py
