[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turbojet-digital-twin"
version = "1.0.0"
description = "Physics-informed four-stage turbojet health monitoring digital twin"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "joblib>=1.3",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
dashboard = ["streamlit>=1.31", "plotly>=5.19"]
reports = ["matplotlib>=3.8", "jinja2>=3.1"]
ml = ["xgboost>=2.0", "torch>=2.2", "onnx>=1.15"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "black>=24.3", "mypy>=1.9", "httpx>=0.27"]
all = ["turbojet-digital-twin[api,dashboard,reports,ml,dev]"]

[project.scripts]
turbojet-twin = "pipeline:main"

[tool.setuptools]
py-modules = ["pipeline"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"
markers = ["slow: slow integration/benchmark tests (skip with -m 'not slow')"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
